# agentic-experiments

./: .gitignore  LICENSE  README.md
mcp-server-sql/: .env.example  README.md  pyproject.toml
mcp-server-sql/mcp_server_sql/: __init__.py  cli.py  config.py  db.py  logging_config.py  metrics.py  server.py
mcp-server-sql/mcp_server_sql/tools/: __init__.py
mcp-server-sql/scripts/: describe_table_postgres.py
sql_agent_api/: .env.example  README.md  pyproject.toml
sql_agent_api/sql_agent_api/: __init__.py  agent_env.py  config.py  database.py  logging_config.py  main.py  metrics.py  models.py  repository.py  schemas.py
sql_agent_api/sql_agent_api/api/: queries.py
sql_agent_llm/: .env.example  README.md  pyproject.toml
sql_agent_llm/sql_agent_llm/: __init__.py  cli.py  config.py  mcp_client.py  metrics.py  prompts.py  runner.py  tools.py
sql_agent_llm/sql_agent_llm/agent/: __init__.py  graph.py
sql_agent_ui/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
sql_agent_ui/app/: layout.tsx  page.tsx
sql_agent_ui/components/: query-form.tsx  query-history.tsx  query-result.tsx  react-query-provider.tsx
