[project]
name = "mcp-server-sql"
version = "0.1.0"
description = "MCP server exposing SQL database tools for agentic systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.2.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=2.0.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "pydantic-settings>=2.2.1",
    "structlog>=23.2.0",
    "prometheus-client>=0.17.0",
    "uvicorn>=0.23.0",
    "typer>=0.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
